# Linux-install-manager

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  linux-install-manager.desktop.hbs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/mime/: linux-install-manager.xml
src-tauri/src/: detector.rs  executor.rs  history.rs  main.rs  planner.rs  pty.rs  receipts.rs  state.rs  system_tools.rs  uninstall.rs
src/core/: history.ts  i18n.ts  notifications.ts  storage.ts  theme.ts
src/i18n/: de.json  en.json  es.json  fr.json  it.json  pt.json  tr.json
src/ui/: about.ts  app.ts  drop_zone.ts  executor_ui.ts  history_ui.ts  planner_ui.ts  receipts_ui.ts  settings.ts  system_ui.ts  terminal_panel.ts  wizard.ts
