[package]
name = "linux-install-manager"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
parking_lot = "0.12"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-notification = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
